[gd_scene load_steps=18 format=3 uid="uid://dwo5040v06h1d"]

[ext_resource type="Script" path="res://scenes/player/player.gd" id="1_8wyc5"]
[ext_resource type="Texture2D" uid="uid://bj5044uiu25ln" path="res://scenes/player/player.png" id="1_xhls2"]
[ext_resource type="PackedScene" uid="uid://dihkw0f4mxuni" path="res://scenes/components/health_component.tscn" id="2_7u8kf"]
[ext_resource type="PackedScene" uid="uid://cvpec66hs45q0" path="res://scenes/abilities/sword_ability/sword_ability_controller.tscn" id="2_56ys7"]
[ext_resource type="PackedScene" uid="uid://k2vi3tgnsljf" path="res://scenes/components/velocity_component.tscn" id="2_muojo"]
[ext_resource type="PackedScene" uid="uid://cjvcpikiuv7hn" path="res://scenes/components/random_stream_player_2d_component.tscn" id="4_5cmuf"]
[ext_resource type="AudioStream" uid="uid://khighfwdvo1" path="res://assets/audio/impactMining_000.ogg" id="5_ec2he"]
[ext_resource type="AudioStream" uid="uid://cud8ox65e0vep" path="res://assets/audio/impactMining_001.ogg" id="6_m6032"]
[ext_resource type="AudioStream" uid="uid://jva7qnwforlt" path="res://assets/audio/impactMining_002.ogg" id="7_pucqp"]
[ext_resource type="AudioStream" uid="uid://dcu0k7vewoa66" path="res://assets/audio/impactMining_003.ogg" id="8_gu0h3"]
[ext_resource type="AudioStream" uid="uid://dhn7ug0377bhg" path="res://assets/audio/impactMining_004.ogg" id="9_e4ula"]

[sub_resource type="Animation" id="Animation_rl24c"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/Sprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_otr4n"]
resource_name = "walk"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -2), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.261799, 0.261799, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/Sprite2D:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.4),
"transitions": PackedFloat32Array(0.707107, 3.605, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.8, 1.1), Vector2(1.5, 0.7), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0nd3x"]
_data = {
"RESET": SubResource("Animation_rl24c"),
"walk": SubResource("Animation_otr4n")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_jnd2o"]
radius = 32.0

[sub_resource type="CircleShape2D" id="CircleShape2D_otggc"]
radius = 5.0

[sub_resource type="CircleShape2D" id="CircleShape2D_du4cp"]
radius = 7.0

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 0
motion_mode = 1
script = ExtResource("1_8wyc5")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0nd3x")
}

[node name="VelocityComponent" parent="." instance=ExtResource("2_muojo")]
max_speed = 90.0
acceleration = 25.0

[node name="HealthComponent" parent="." instance=ExtResource("2_7u8kf")]

[node name="RandomStreamPlayer2DComponent" parent="." instance=ExtResource("4_5cmuf")]
streams = Array[AudioStream]([ExtResource("5_ec2he"), ExtResource("6_m6032"), ExtResource("7_pucqp"), ExtResource("8_gu0h3"), ExtResource("9_e4ula")])

[node name="Abilities" type="Node" parent="."]

[node name="SwordAbilityController" parent="Abilities" instance=ExtResource("2_56ys7")]

[node name="DamageTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="HealthBar" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(32, 6)
offset_left = -16.0
offset_top = -24.0
offset_right = 16.0
offset_bottom = -18.0
pivot_offset = Vector2(16, 3)
max_value = 1.0
value = 0.5
show_percentage = false

[node name="PickupArea2D" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupArea2D"]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_jnd2o")

[node name="Visuals" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Visuals"]
texture = ExtResource("1_xhls2")
offset = Vector2(0, -8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_otggc")

[node name="CollisionArea2D" type="Area2D" parent="."]
position = Vector2(0, -7)
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionArea2D"]
shape = SubResource("CircleShape2D_du4cp")

[connection signal="died" from="HealthComponent" to="." method="_on_health_component_died"]
[connection signal="health_changed" from="HealthComponent" to="." method="_on_health_component_health_changed"]
[connection signal="timeout" from="DamageTimer" to="." method="_on_damage_timer_timeout"]
[connection signal="body_entered" from="CollisionArea2D" to="." method="_on_collision_area_2d_body_entered"]
[connection signal="body_exited" from="CollisionArea2D" to="." method="_on_collision_area_2d_body_exited"]
